--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
 </head>
 <body>
     <h1>My CV</h1>
+    <h1>Contact information</h1>
+<ul>
+    <li>Phone: +375447926636</li>
+    <li>E-mail: yananazarenko49@gmail.com</li>
+    <li>Telegram: @yanenss</li>
+    <li>GitHub: @yanenss</li>
+    <li>Discord: @yanenss</li>
+</ul>
 </body>
 </html>
