feat: add new information

--- a/index.html
+++ b/index.html
@@ -15,5 +15,24 @@
         <li>GitHub: @yanenss</li>
         <li>Discord: @yanenss</li>
     </ul>
+    <h1>About myself</h1>
+    <p>Hi there! I work as a nurse, but I'm currently pursuing a career change as a front-end developer. While nursing has been part of my journey, I've found a new passion in coding and am excited about transitioning into the dynamic field of web development.</p>
+    <h1>dication</h1>
+    <ul>
+        <li>Gomel State Medical College</li>
+    </ul>
+    <h1>My skills</h1>
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>GitHub</li>
+    </ul>
+    <h1>Languages</h1>
+    <ul>
+        <li>Russian - Native</li>
+        <li>Belorussian - Native</li>
+        <li>English - A2</li>
+    </ul>
 </body>
 </html>
