--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
         <li>Phone: +375447926636</li>
         <li>E-mail: yananazarenko49@gmail.com</li>
-        <li>Telegram: @yanenss</li>
+        <li>Telegram: <a href="https://t.me/yanenss" target="_blank">@yanenss</a></li>
         <li>GitHub: @yanenss</li>
         <li>Discord: @yanenss</li>
     </ul>
