--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li>Phone: +375447926636</li>
         <li>E-mail: yananazarenko49@gmail.com</li>
         <li>Telegram: <a href="https://t.me/yanenss" target="_blank">@yanenss</a></li>
-        <li>GitHub: @yanenss</li>
+        <li>GitHub: <a href="https://github.com/yanenss" target="_blank">@yanenss</a></li>
         <li>Discord: @yanenss</li>
     </ul>
     <h1>About myself</h1>
