--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>My CV</h1>
+    <h1>Yana Nazarenko</h1>
     <h1>Contact information</h1>
     <ul>
         <li>Phone: +375447926636</li>
