--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>My CV</h1>
     <h1>Yana Nazarenko</h1>
+    <img src="mypic.jpg" width="400" height="400" alt="My photo" />
     <h1>Contact information</h1>
     <ul>
         <li>Phone: +375447926636</li>
