feat: add div class

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>My CV</h1>
+    <div class="personal">
     <h1>Yana Nazarenko</h1>
     <img src="mypic.jpg" width="400" height="400" alt="My photo" />
     <h1>Contact information</h1>
@@ -18,12 +19,18 @@
         <li>GitHub: <a href="https://github.com/yanenss" target="_blank">@yanenss</a></li>
         <li>Discord: @yanenss</li>
     </ul>
+    </div>   
+    <div class="aboutme">
     <h1>About myself</h1>
     <p>Hi there! I work as a nurse, but I'm currently pursuing a career change as a front-end developer. While nursing has been part of my journey, I've found a new passion in coding and am excited about transitioning into the dynamic field of web development.</p>
-    <h1>dication</h1>
+    </div>
+    <div class="education">
+    <h1>Edication</h1>
     <ul>
         <li>Gomel State Medical College</li>
     </ul>
+    </div>
+    <div class="skills">
     <h1>My skills</h1>
     <ul>
         <li>HTML</li>
@@ -31,11 +38,23 @@
         <li>JavaScript</li>
         <li>GitHub</li>
     </ul>
+    </div>
+    <div class="languages">
     <h1>Languages</h1>
     <ul>
         <li>Russian - Native</li>
         <li>Belorussian - Native</li>
         <li>English - A2</li>
     </ul>
+    </div>
+    <footer class="footer">
+        <a href="https://github.com/yanenss"><i class="fa-brands fa-github"></i>yanenss</a>
+        <p><time>2023</time></p>
+    
+        <a href="https://rs.school/" target="_blank"><img src="https://rs.school/images/rs_school_js.svg"
+            width="70" height="70"
+            alt="RSschool"></a>
+    
+      </footer>
 </body>
 </html>
