feat: add new styles

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <title>CV Yana Nazarenko</title>
 </head>
 <body>
-    <h1>My CV</h1>
     <div class="personal">
     <h1>Yana Nazarenko</h1>
-    <img src="mypic.jpg" width="400" height="400" alt="My photo" />
+    </div>
+    <div class="image">
+      <img class="mypic" src="mypic.jpg" width="400" height="400" alt="My photo"/>  
+    </div>
+    <div class="Contact information">
     <h1>Contact information</h1>
     <ul>
         <li>Phone: +375447926636</li>
@@ -52,7 +55,6 @@
         <p><time>2023</time></p>
     
         <a href="https://rs.school/" target="_blank"><img src="https://rs.school/images/rs_school_js.svg"
-            width="70" height="70"
             alt="RSschool"></a>
     
       </footer>
