--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </ul>
     </div>
     <footer class="footer">
-        <a href="https://github.com/yanenss"><i class="fa-brands fa-github"></i>yanenss</a>
+        <a href="https://github.com/yanenss" target="_blank"><img src="black.png" alt="yanenss"></a>
         <p><time>2023</time></p>
     
         <a href="https://rs.school/" target="_blank"><img src="https://rs.school/images/rs_school_js.svg"
