feat: new styles

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>CV Yana Nazarenko</title>
 </head>
 <body>
-    <div class="personal">
-    <h1>Yana Nazarenko</h1>
-    </div>
+    <main class="container">
+        <section class="left">
     <div class="image">
       <img class="mypic" src="mypic.jpg" width="400" height="400" alt="My photo"/>  
+    </div>
+    <div class="personal">
+    <h1>Yana Nazarenko</h1>
     </div>
     <div class="Contact information">
     <h1>Contact information</h1>
@@ -22,7 +24,9 @@
         <li>GitHub: <a href="https://github.com/yanenss" target="_blank">@yanenss</a></li>
         <li>Discord: @yanenss</li>
     </ul>
-    </div>   
+    </div> 
+    </section> 
+    <section class="right">
     <div class="aboutme">
     <h1>About myself</h1>
     <p>Hi there! I work as a nurse, but I'm currently pursuing a career change as a front-end developer. While nursing has been part of my journey, I've found a new passion in coding and am excited about transitioning into the dynamic field of web development.</p>
@@ -50,6 +54,8 @@
         <li>English - A2</li>
     </ul>
     </div>
+</section>
+    </main>
     <footer class="footer">
         <a href="https://github.com/yanenss" target="_blank"><img src="black.png" alt="yanenss"></a>
         <p><time>2023</time></p>
