--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     <main class="container">
         <section class="left">
     <div class="image">
-      <img class="mypic" src="mypic.jpg" width="400" height="400" alt="My photo"/>  
+      <p style="text-align: center;"><img class="mypic" src="mypic.jpg" width="270" height="270" alt="My photo"/></p>  
     </div>
     <div class="personal">
     <h1>Yana Nazarenko</h1>
     </div>
-    <div class="Contact information">
+    <div class="contact">
     <h1>Contact information</h1>
     <ul>
         <li>Phone: +375447926636</li>
         <li>E-mail: yananazarenko49@gmail.com</li>
-        <li>Telegram: <a href="https://t.me/yanenss" target="_blank">@yanenss</a></li>
-        <li>GitHub: <a href="https://github.com/yanenss" target="_blank">@yanenss</a></li>
+        <li>Telegram: <a href="https://t.me/yanenss" target="_blank" style="color:#3b3b3d;" >@yanenss</a></li>
+        <li>GitHub: <a href="https://github.com/yanenss" target="_blank" style="color:#3b3b3d;">@yanenss</a></li>
         <li>Discord: @yanenss</li>
     </ul>
     </div> 
