feat: add photo & new styles

--- a/index.html
+++ b/index.html
@@ -9,45 +9,51 @@
 <body>
     <main class="container">
         <section class="left">
-    <div class="image">
-      <p style="text-align: center;"><img class="mypic" src="mypic.jpg" width="270" height="270" alt="My photo"/></p>  
-    </div>
     <div class="personal">
-    <h1>Yana Nazarenko</h1>
+    <hr/>
+    <h1>YANA NAZARENKO</h1>
+    <hr/>
+    </div>        
+    <div class="image">
+      <p style="text-align: center; "><img class="mypic" src="mypic.jpg" width="200" height="200" alt="My photo"/></p>  
+      <p style="text-align: center; "><img class="mypic" src="myphoto.jpeg" width="200" height="200" alt="My photo"/></p> 
+      <p style="text-align: center; "><img class="mypic" src="photo.jpeg" width="200" height="200" alt="My photo"/></p> 
     </div>
-    <div class="contact">
-    <h1>Contact information</h1>
-    <ul>
-        <li>Phone: +375447926636</li>
-        <li>E-mail: yananazarenko49@gmail.com</li>
-        <li>Telegram: <a href="https://t.me/yanenss" target="_blank" style="color:#3b3b3d;" >@yanenss</a></li>
-        <li>GitHub: <a href="https://github.com/yanenss" target="_blank" style="color:#3b3b3d;">@yanenss</a></li>
-        <li>Discord: @yanenss</li>
-    </ul>
-    </div> 
     </section> 
     <section class="right">
+        <div class="contact">
+            <h1>CONTACT INFORMATION</h1>
+            <ul>
+                <li>&#x2706; Phone: +375447926636</li>
+                <li>&#x2709;E-mail: yananazarenko49@gmail.com</li>
+                <li>&#10148;Telegram: <a href="https://t.me/yanenss" target="_blank" style="color:#3b3b3d;" >@yanenss</a></li>
+                <li><img src="black.png" width="23" height="23">GitHub: <a href="https://github.com/yanenss" target="_blank" style="color:#3b3b3d;">@yanenss</a></li>
+                <li><img src="discord-logo-bss.webp" width="19" height="19">Discord: @yanenss</li>
+            </ul>
+            </div> 
     <div class="aboutme">
-    <h1>About myself</h1>
-    <p>Hi there! I work as a nurse, but I'm currently pursuing a career change as a front-end developer. While nursing has been part of my journey, I've found a new passion in coding and am excited about transitioning into the dynamic field of web development.</p>
+    <h1>ABOUT MYSELF</h1>
+    <ul>
+    <li><p>Hi there! I work as a nurse, but I'm currently pursuing a career change as a front-end developer. While nursing has been part of my journey, I've found a new passion in coding and am excited about transitioning into the dynamic field of web development.</li></p>
+    </ul>
     </div>
     <div class="education">
-    <h1>Edication</h1>
+    <h1>EDICATION</h1>
     <ul>
         <li>Gomel State Medical College</li>
     </ul>
     </div>
     <div class="skills">
-    <h1>My skills</h1>
+    <h1>MY SKILLS</h1>
     <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>GitHub</li>
+        <li><img src="HTML.png" width="15" height="15">HTML</li>
+        <li><img src="CSS.png" width="19" height="19">CSS</li>
+        <li><img src="JS.png" width="19" height="19">JavaScript</li>
+        <li><img src="black.png" width="23" height="23">GitHub</li>
     </ul>
     </div>
     <div class="languages">
-    <h1>Languages</h1>
+    <h1>LANGUAGES</h1>
     <ul>
         <li>Russian - Native</li>
         <li>Belorussian - Native</li>
