--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <h1>CONTACT INFORMATION</h1>
             <ul>
                 <li>&#x2706; Phone: +375447926636</li>
-                <li>&#x2709;E-mail: yananazarenko49@gmail.com</li>
+                <li>&#x2709;E-mail: <a href="mailto:yananazarenko49@gmail.com" target="_blank" style="color:#3b3b3d;">yananazarenko49@gmail.com</a></li>
                 <li>&#10148;Telegram: <a href="https://t.me/yanenss" target="_blank" style="color:#3b3b3d;" >@yanenss</a></li>
                 <li><img src="black.png" width="23" height="23">GitHub: <a href="https://github.com/yanenss" target="_blank" style="color:#3b3b3d;">@yanenss</a></li>
-                <li><img src="discord-logo-bss.webp" width="19" height="19">Discord: @yanenss</li>
+                <li><img src="discord-logo-bss.webp" width="19" height="19">Discord: <a href="https://discordapp.com/users/998264439239364608/" target="_blank" style="color:#3b3b3d;">@yanenss</a></li>
             </ul>
             </div> 
     <div class="aboutme">
