--- a/index.html
+++ b/index.html
@@ -9,64 +9,63 @@
 <body>
     <main class="container">
         <section class="left">
-    <div class="personal">
-    <h1>YANA NAZARENKO</h1>
-    </div>        
-    <div class="image">
-      <p style="text-align: center; "><img class="mypic" src="mypic.jpg" width="200" height="200" alt="My photo"/></p>  
-      <p style="text-align: center; "><img class="mypic" src="myphoto.jpeg" width="200" height="200" alt="My photo"/></p> 
-      <p style="text-align: center; "><img class="mypic" src="photo.jpeg" width="200" height="200" alt="My photo"/></p> 
-    </div>
-    </section> 
-    <section class="right">
-        <div class="contact">
-            <h1>CONTACT INFORMATION</h1>
-            <ul>
-                <li>&#x2706; Phone: +375447926636</li>
-                <li>&#x2709;E-mail: <a href="mailto:yananazarenko49@gmail.com" target="_blank" style="color:#3b3b3d;">yananazarenko49@gmail.com</a></li>
-                <li>&#10148;Telegram: <a href="https://t.me/yanenss" target="_blank" style="color:#3b3b3d;" >@yanenss</a></li>
-                <li><img src="black.png" width="23" height="23">GitHub: <a href="https://github.com/yanenss" target="_blank" style="color:#3b3b3d;">@yanenss</a></li>
-                <li><img src="discord-logo-bss.webp" width="19" height="19">Discord: <a href="https://discordapp.com/users/998264439239364608/" target="_blank" style="color:#3b3b3d;">@yanenss</a></li>
-            </ul>
+            <div class="personal">
+                <h1>YANA NAZARENKO</h1>
+            </div>        
+            <div class="image">
+                <p style="text-align: center; "><img class="mypic" src="mypic.jpg" width="200" height="200" alt="My photo"/></p>
+                <p style="text-align: center; "><img class="mypic" src="myphoto.jpeg" width="200" height="200" alt="My photo"/></p> 
+                <p style="text-align: center; "><img class="mypic" src="photo.jpeg" width="200" height="200" alt="My photo"/></p> 
+            </div>
+        </section> 
+        <section class="right">
+            <div class="contact">
+                <h1>CONTACT INFORMATION</h1>
+                <ul>
+                    <li>Phone: +375447926636</li>
+                    <li>E-mail: <a href="mailto:yananazarenko49@gmail.com" target="_blank" style="color:#3b3b3d;">yananazarenko49@gmail.com</a></li>
+                    <li>Telegram: <a href="https://t.me/yanenss" target="_blank" style="color:#3b3b3d;" >@yanenss</a></li>
+                    <li>GitHub: <a href="https://github.com/yanenss" target="_blank" style="color:#3b3b3d;">@yanenss</a></li>
+                    <li>Discord: <a href="https://discordapp.com/users/998264439239364608/" target="_blank" style="color:#3b3b3d;">@yanenss</a></li>
+                </ul>
             </div> 
-    <div class="aboutme">
-    <h1>ABOUT MYSELF</h1>
-    <ul>
-    <li><p>Hi there! I work as a nurse, but I'm currently pursuing a career change as a front-end developer. While nursing has been part of my journey, I've found a new passion in coding and am excited about transitioning into the dynamic field of web development.</li></p>
-    </ul>
-    </div>
-    <div class="education">
-    <h1>EDICATION</h1>
-    <ul>
-        <li>Gomel State Medical College</li>
-    </ul>
-    </div>
-    <div class="skills">
-    <h1>MY SKILLS</h1>
-    <ul>
-        <li><img src="HTML.png" width="15" height="15">HTML</li>
-        <li><img src="CSS.png" width="19" height="19">CSS</li>
-        <li><img src="JS.png" width="19" height="19">JavaScript</li>
-        <li><img src="black.png" width="23" height="23">GitHub</li>
-    </ul>
-    </div>
-    <div class="languages">
-    <h1>LANGUAGES</h1>
-    <ul>
-        <li>Russian - Native</li>
-        <li>Belorussian - Native</li>
-        <li>English - A2</li>
-    </ul>
-    </div>
-</section>
+            <div class="aboutme">
+                <h1>ABOUT MYSELF</h1>
+                <ul>
+                    <li>
+                        <p>Hi there! I work as a nurse, but I'm currently pursuing a career change as a front-end developer. While nursing has been part of my journey, I've found a new passion in coding and am excited about transitioning into the dynamic field of web development.</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="education">
+                <h1>EDICATION</h1>
+                <ul>
+                    <li>Gomel State Medical College</li>
+                </ul>
+            </div>
+            <div class="skills">
+                <h1>MY SKILLS</h1>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>GitHub</li>
+                </ul>
+            </div>
+            <div class="languages">
+                <h1>LANGUAGES</h1>
+                <ul>
+                    <li>Russian - Native</li>
+                    <li>Belorussian - Native</li>
+                    <li>English - A2</li>
+                </ul>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <a href="https://github.com/yanenss" target="_blank"><img src="black.png" alt="yanenss"></a>
         <p><time>2023</time></p>
-    
-        <a href="https://rs.school/" target="_blank"><img src="https://rs.school/images/rs_school_js.svg"
-            alt="RSschool"></a>
-    
-      </footer>
+        <a href="https://rs.school/" target="_blank"><img src="https://rs.school/images/rs_school_js.svg" alt="RSschool"></a>
+    </footer>
 </body>
 </html>
