refactor: css file

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <section class="left">
             <div class="personal">
                 <h1>YANA NAZARENKO</h1>
-            </div>        
-            <div class="image">
-                <p style="text-align: center; "><img class="mypic" src="mypic.jpg" width="200" height="200" alt="My photo"/></p>
-                <p style="text-align: center; "><img class="mypic" src="myphoto.jpeg" width="200" height="200" alt="My photo"/></p> 
-                <p style="text-align: center; "><img class="mypic" src="photo.jpeg" width="200" height="200" alt="My photo"/></p> 
             </div>
-        </section> 
+            <div class="image">
+                <p style="text-align: center; "><img class="mypic" src="mypic.jpg" width="200" height="200" alt="My photo"></p>
+                <p style="text-align: center; "><img class="mypic" src="myphoto.jpeg" width="200" height="200" alt="My photo"></p>
+                <p style="text-align: center; "><img class="mypic" src="photo.jpeg" width="200" height="200" alt="My photo"></p>
+            </div>
+        </section>
         <section class="right">
             <div class="contact">
                 <h1>CONTACT INFORMATION</h1>
@@ -28,7 +28,7 @@
                     <li>GitHub: <a href="https://github.com/yanenss" target="_blank" style="color:#3b3b3d;">@yanenss</a></li>
                     <li>Discord: <a href="https://discordapp.com/users/998264439239364608/" target="_blank" style="color:#3b3b3d;">@yanenss</a></li>
                 </ul>
-            </div> 
+            </div>
             <div class="aboutme">
                 <h1>ABOUT MYSELF</h1>
                 <ul>
