docs: update readme with additional information

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
                 <h1>YANA NAZARENKO</h1>
             </div>
             <div class="image">
-                <p style="text-align: center; "><img class="mypic" src="mypic.jpg" width="200" height="200" alt="My photo"></p>
-                <p style="text-align: center; "><img class="mypic" src="myphoto.jpeg" width="200" height="200" alt="My photo"></p>
-                <p style="text-align: center; "><img class="mypic" src="photo.jpeg" width="200" height="200" alt="My photo"></p>
+                <p style="text-align: center; "><img class="mypic" src="mypic.jpg" alt="My photo"></p>
+                <p style="text-align: center; "><img class="mypic" src="myphoto.jpeg" alt="My photo"></p>
+                <p style="text-align: center; "><img class="mypic" src="photo.jpeg" alt="My photo"></p>
             </div>
         </section>
         <section class="right">
@@ -23,10 +23,10 @@
                 <h1>CONTACT INFORMATION</h1>
                 <ul>
                     <li>Phone: +375447926636</li>
-                    <li>E-mail: <a href="mailto:yananazarenko49@gmail.com" target="_blank" style="color:#3b3b3d;">yananazarenko49@gmail.com</a></li>
-                    <li>Telegram: <a href="https://t.me/yanenss" target="_blank" style="color:#3b3b3d;" >@yanenss</a></li>
-                    <li>GitHub: <a href="https://github.com/yanenss" target="_blank" style="color:#3b3b3d;">@yanenss</a></li>
-                    <li>Discord: <a href="https://discordapp.com/users/998264439239364608/" target="_blank" style="color:#3b3b3d;">@yanenss</a></li>
+                    <li>E-mail: <a href="mailto:yananazarenko49@gmail.com" target="_blank">yananazarenko49@gmail.com</a></li>
+                    <li>Telegram: <a href="https://t.me/yanenss" target="_blank">@yanenss</a></li>
+                    <li>GitHub: <a href="https://github.com/yanenss" target="_blank">@yanenss</a></li>
+                    <li>Discord: <a href="https://discordapp.com/users/998264439239364608/" target="_blank">@yanenss</a></li>
                 </ul>
             </div>
             <div class="aboutme">
