refactor: change structure of the project

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
                 <h1>YANA NAZARENKO</h1>
             </div>
             <div class="image">
-                <p style="text-align: center; "><img class="mypic" src="mypic.jpg" alt="My photo"></p>
-                <p style="text-align: center; "><img class="mypic" src="myphoto.jpeg" alt="My photo"></p>
-                <p style="text-align: center; "><img class="mypic" src="photo.jpeg" alt="My photo"></p>
+                <img class="mypic" src="mypic.jpg" alt="My photo"></p>
+                <img class="mypic" src="myphoto.jpeg" alt="My photo"></p>
+                <img class="mypic" src="photo.jpeg" alt="My photo"></p>
             </div>
         </section>
         <section class="right">
@@ -28,12 +28,13 @@
                     <li>GitHub: <a href="https://github.com/yanenss" target="_blank">@yanenss</a></li>
                     <li>Discord: <a href="https://discordapp.com/users/998264439239364608/" target="_blank">@yanenss</a></li>
                 </ul>
-            </div>
             <div class="aboutme">
                 <h1>ABOUT MYSELF</h1>
                 <ul>
                     <li>
-                        <p>Hi there! I work as a nurse, but I'm currently pursuing a career change as a front-end developer. While nursing has been part of my journey, I've found a new passion in coding and am excited about transitioning into the dynamic field of web development.</p>
+                        <p>
+                            Hi there! I work as a nurse, but I'm currently pursuing a career change as a front-end developer. While nursing has been part of my journey, I've found a new passion in coding and am excited about transitioning into the dynamic field of web development.
+                        </p>
                     </li>
                 </ul>
             </div>
@@ -61,7 +62,6 @@
                 </ul>
             </div>
         </section>
-    </main>
     <footer class="footer">
         <a href="https://github.com/yanenss" target="_blank"><img src="black.png" alt="yanenss"></a>
         <p><time>2023</time></p>
