--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
                 <h1>ABOUT MYSELF</h1>
                 <ul>
                     <li>
-                        <p>
-                            Hi there! I work as a nurse, but I'm currently pursuing a career change as a front-end developer. While nursing has been part of my journey, I've found a new passion in coding and am excited about transitioning into the dynamic field of web development.
-                        </p>
+                        <p>Hi there! I work as a nurse, but I'm currently pursuing a career change as a front-end developer. While nursing has been part of my journey, I've found a new passion in coding and am excited about transitioning into the dynamic field of web development.</p>
                     </li>
                 </ul>
             </div>
@@ -62,6 +60,7 @@
                 </ul>
             </div>
         </section>
+    </main>
     <footer class="footer">
         <a href="https://github.com/yanenss" target="_blank"><img src="black.png" alt="yanenss"></a>
         <p><time>2023</time></p>
