--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <main class="container">
         <section class="left">
             <div class="personal">
-                <h1>YANA NAZARENKO</h1>
-            </div>
+                <h1>YANA NAZARENKO</h1> 
+            </div> 
             <div class="image">
-                <img class="mypic" src="mypic.jpg" alt="My photo"></p>
-                <img class="mypic" src="myphoto.jpeg" alt="My photo"></p>
-                <img class="mypic" src="photo.jpeg" alt="My photo"></p>
+                <img class="mypic" src="mypic.jpg" alt="My photo">
+                <img class="mypic" src="myphoto.jpeg" alt="My photo">
+                <img class="mypic" src="photo.jpeg" alt="My photo">
             </div>
         </section>
         <section class="right">
@@ -28,19 +28,10 @@
                     <li>GitHub: <a href="https://github.com/yanenss" target="_blank">@yanenss</a></li>
                     <li>Discord: <a href="https://discordapp.com/users/998264439239364608/" target="_blank">@yanenss</a></li>
                 </ul>
+            </div>
             <div class="aboutme">
                 <h1>ABOUT MYSELF</h1>
-                <ul>
-                    <li>
-                        <p>Hi there! I work as a nurse, but I'm currently pursuing a career change as a front-end developer. While nursing has been part of my journey, I've found a new passion in coding and am excited about transitioning into the dynamic field of web development.</p>
-                    </li>
-                </ul>
-            </div>
-            <div class="education">
-                <h1>EDICATION</h1>
-                <ul>
-                    <li>Gomel State Medical College</li>
-                </ul>
+                <p>Hi there! I work as a nurse, but I'm currently pursuing a career change as a front-end developer. While nursing has been part of my journey, I've found a new passion in coding and am excited about transitioning into the dynamic field of web development.</p>
             </div>
             <div class="skills">
                 <h1>MY SKILLS</h1>
@@ -57,6 +48,12 @@
                     <li>Russian - Native</li>
                     <li>Belorussian - Native</li>
                     <li>English - A2</li>
+                </ul>
+            </div>
+            <div class="education">
+                <h1>EDICATION</h1>
+                <ul>
+                    <li>Gomel State Medical College</li>
                 </ul>
             </div>
         </section>
